# AnalysisMacroeconomicData

./: pyproject.toml  readme.md
macro_analyzer/: cli.py  io.py
macro_analyzer/reports/: __init__.py  average_gdp.py  base.py
tests/: test_average_gdp.py  test_cli.py  test_io.py
