[project]
name = "macro-analyzer"
version = "0.1.0"
description = ""
authors = [
    { name = "Beliy", email = "beliypozhizni@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "tabulate (>=0.9.0,<0.10.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.pytest.ini_options]
minversion = "9.0.2"
addopts = "--cov=macro_analyzer"
testpaths = ["tests"]